--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Seed Planting Guide</title>
+  <title>SeedSavvy</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -115,7 +115,7 @@
 
   <div class="container">
     <div id="main-content">
-      <h2>Seed Planting Guide</h2>
+      <h2>SeedSavvy</h2>
       <label for="seedType">Enter the type of seed:</label>
       <input type="text" id="seedType" placeholder="e.g., Tomato, Carrot, Rose...">
       <button onclick="getPlantingInfo()">Get Planting Info</button>
